# invoiceManager

./: .env  .gitignore  README.md  app.py  expenditure.db  main.py  pyproject.toml  requirements.txt  test.py
backend/src/utils/: bcrypt.ts  uuid.ts
backend_fastapi/: .env.example  pytest.ini  requirements.txt
backend_fastapi/app/: main.py
backend_fastapi/app/config/: settings.py
backend_fastapi/app/db/: database.py  redis_db.py
backend_fastapi/app/db/models/: member_model_db.py  project_model_db.py  role_model_db.py  task_model_db.py  user_model_db.py  workspace_model_db.py
backend_fastapi/app/models/: member_models.py  project_models.py  role_permission_models.py  task_models.py  token_models.py  user_models.py  workspace_models.py
backend_fastapi/app/routers/: auth_router.py  member_router.py  project_router.py  task_router.py  workspace_router.py
backend_fastapi/app/services/: auth_service.py  member_service.py  project_service.py  task_service.py  workspace_service.py
backend_fastapi/app/utils/: rbac.py  security.py
backend_fastapi/tests/: conftest.py
backend_fastapi/tests/integration/routers/: test_auth_router.py  test_member_router.py  test_project_router.py  (+2 more)
invoicer/: app.py  cli.py  data_model.py  db_connection.py  streamlit_app.py
invoicer/data/: base.py  config.py  model.py
new_gui/: package-lock.json  package.json
new_gui/src/: App.tsx  api.ts  theme.tsx
new_gui/src/components/: ThemeToggle.tsx  UserProfile.tsx
new_gui/src/pages/: ChatPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  UserPage.tsx
scripts/: seed_roles.py
(+9 files in other folders)
